--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ h1{
 .coler{
     color: orange;
 }
-section{
+.experince-area{
     display: flex;
      margin-bottom: 150px;
+     
 }
 .half-width{
     width: 50%;
@@ -37,4 +38,5 @@ section{
     background-image: url(./images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+    margin: 0px;
 }
