--- a/style.css
+++ b/style.css
@@ -6,17 +6,34 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-weight: 40px;
+}
 .coler{
     color: orange;
 }
 .experince-area{
     display: flex;
      margin-bottom: 150px;
-     
+
 }
 .half-width{
     width: 50%;
     padding-left: 5%;
+}
+.experince-item{
+width: 40%;
+margin-left: 5% ;
+margin-right: 5%;
+padding: 20px;
+border-radius: 20px;
+box-shadow: 10px 10px 20px rgb(85, 9, 9);
+}
+.experonce{
+    background-image: url(./images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    
 }
 .half-width img{
     width: 70%;
@@ -39,4 +56,13 @@ h1{
     background-repeat: no-repeat;
     background-position: right;
     margin: 0px;
+}
+#full{
+    border-left: 7px solid tomato;
+}
+#baby{
+    border-left: 7px solid rgb(46, 7, 218);
+}
+footer p{
+    text-align: center;
 }
